parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Body
Rule 2     Program -> Declares Body
Rule 3     Program -> Declares
Rule 4     Declares -> Declare
Rule 5     Declares -> Declares Declare
Rule 6     Declare -> INT NAME
Rule 7     Declare -> INT NAME ATR NUM
Rule 8     Declare -> ARRAY NAME LSBRACKET NUM RSBRACKET
Rule 9     Declare -> ARRAY NAME LSBRACKET NUM RSBRACKET ATR LPAREN List RPAREN
Rule 10    Declare -> MATRIX NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET
Rule 11    Declare -> MATRIX NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET ATR LPAREN ListOfLists RPAREN
Rule 12    List -> NUM COMMA List
Rule 13    List -> NUM
Rule 14    ListOfLists -> LPAREN List RPAREN COMMA ListOfLists
Rule 15    ListOfLists -> LPAREN List RPAREN
Rule 16    Body -> Statement
Rule 17    Body -> Body Statement
Rule 18    Statement -> Attribution
Rule 19    Statement -> If
Rule 20    Statement -> While
Rule 21    Statement -> Write
Rule 22    Attribution -> NAME ATR Expression
Rule 23    Attribution -> NAME LSBRACKET Expression RSBRACKET ATR Expression
Rule 24    Attribution -> NAME LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET ATR Expression
Rule 25    Attribution -> NAME ATR READ
Rule 26    Attribution -> NAME LSBRACKET Expression RSBRACKET ATR READ
Rule 27    Attribution -> NAME LSBRACKET Expression LSBRACKET Expression RSBRACKET ATR READ
Rule 28    If -> IF LPAREN Condition RPAREN THEN Body END
Rule 29    If -> IF LPAREN Condition RPAREN THEN Body ELSE Body END
Rule 30    While -> WHILE LPAREN Condition RPAREN DO Body END
Rule 31    Write -> WRITES LPAREN STRING RPAREN
Rule 32    Write -> WRITEI LPAREN Expression RPAREN
Rule 33    Expression -> Expression ADD Term
Rule 34    Expression -> Expression SUB Term
Rule 35    Expression -> Expression OR Term
Rule 36    Expression -> Term
Rule 37    Term -> Term MULT Factor
Rule 38    Term -> Term DIV Factor
Rule 39    Term -> Term MOD Factor
Rule 40    Term -> Term AND Factor
Rule 41    Term -> Factor
Rule 42    Factor -> NUM
Rule 43    Factor -> Variable
Rule 44    Factor -> LPAREN Expression RPAREN
Rule 45    Factor -> Condition
Rule 46    Factor -> NOT LPAREN Condition RPAREN
Rule 47    Condition -> Expression GREATER Expression
Rule 48    Condition -> Expression LESS Expression
Rule 49    Condition -> Expression GREATERE Expression
Rule 50    Condition -> Expression LESSE Expression
Rule 51    Condition -> Expression EQUAL Expression
Rule 52    Condition -> Expression NEQUAL Expression
Rule 53    Condition -> Expression
Rule 54    Variable -> NAME LSBRACKET Expression RSBRACKET
Rule 55    Variable -> NAME LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET
Rule 56    Variable -> NAME

Terminals, with rules where they appear

ADD                  : 33
AND                  : 40
ARRAY                : 8 9
ATR                  : 7 9 11 22 23 24 25 26 27
COMMA                : 12 14
DIV                  : 38
DO                   : 30
ELSE                 : 29
END                  : 28 29 30
EQUAL                : 51
GREATER              : 47
GREATERE             : 49
IF                   : 28 29
INT                  : 6 7
LESS                 : 48
LESSE                : 50
LPAREN               : 9 11 14 15 28 29 30 31 32 44 46
LSBRACKET            : 8 9 10 10 11 11 23 24 24 26 27 27 54 55 55
MATRIX               : 10 11
MOD                  : 39
MULT                 : 37
NAME                 : 6 7 8 9 10 11 22 23 24 25 26 27 54 55 56
NEQUAL               : 52
NOT                  : 46
NUM                  : 7 8 9 10 10 11 11 12 13 42
OR                   : 35
READ                 : 25 26 27
RPAREN               : 9 11 14 15 28 29 30 31 32 44 46
RSBRACKET            : 8 9 10 10 11 11 23 24 24 26 27 54 55 55
STRING               : 31
SUB                  : 34
THEN                 : 28 29
WHILE                : 30
WRITEI               : 32
WRITES               : 31
error                : 

Nonterminals, with rules where they appear

Attribution          : 18
Body                 : 1 2 17 28 29 29 30
Condition            : 28 29 30 45 46
Declare              : 4 5
Declares             : 2 3 5
Expression           : 22 23 23 24 24 24 26 27 27 32 33 34 35 44 47 47 48 48 49 49 50 50 51 51 52 52 53 54 55 55
Factor               : 37 38 39 40 41
If                   : 19
List                 : 9 12 14 15
ListOfLists          : 11 14
Program              : 0
Statement            : 16 17
Term                 : 33 34 35 36 37 38 39 40
Variable             : 43
While                : 20
Write                : 21

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Body
    (2) Program -> . Declares Body
    (3) Program -> . Declares
    (16) Body -> . Statement
    (17) Body -> . Body Statement
    (4) Declares -> . Declare
    (5) Declares -> . Declares Declare
    (18) Statement -> . Attribution
    (19) Statement -> . If
    (20) Statement -> . While
    (21) Statement -> . Write
    (6) Declare -> . INT NAME
    (7) Declare -> . INT NAME ATR NUM
    (8) Declare -> . ARRAY NAME LSBRACKET NUM RSBRACKET
    (9) Declare -> . ARRAY NAME LSBRACKET NUM RSBRACKET ATR LPAREN List RPAREN
    (10) Declare -> . MATRIX NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET
    (11) Declare -> . MATRIX NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET ATR LPAREN ListOfLists RPAREN
    (22) Attribution -> . NAME ATR Expression
    (23) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR Expression
    (24) Attribution -> . NAME LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET ATR Expression
    (25) Attribution -> . NAME ATR READ
    (26) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR READ
    (27) Attribution -> . NAME LSBRACKET Expression LSBRACKET Expression RSBRACKET ATR READ
    (28) If -> . IF LPAREN Condition RPAREN THEN Body END
    (29) If -> . IF LPAREN Condition RPAREN THEN Body ELSE Body END
    (30) While -> . WHILE LPAREN Condition RPAREN DO Body END
    (31) Write -> . WRITES LPAREN STRING RPAREN
    (32) Write -> . WRITEI LPAREN Expression RPAREN

    INT             shift and go to state 10
    ARRAY           shift and go to state 12
    MATRIX          shift and go to state 13
    NAME            shift and go to state 11
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    WRITES          shift and go to state 16
    WRITEI          shift and go to state 17

    Program                        shift and go to state 1
    Body                           shift and go to state 2
    Declares                       shift and go to state 3
    Statement                      shift and go to state 4
    Declare                        shift and go to state 5
    Attribution                    shift and go to state 6
    If                             shift and go to state 7
    While                          shift and go to state 8
    Write                          shift and go to state 9

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Body .
    (17) Body -> Body . Statement
    (18) Statement -> . Attribution
    (19) Statement -> . If
    (20) Statement -> . While
    (21) Statement -> . Write
    (22) Attribution -> . NAME ATR Expression
    (23) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR Expression
    (24) Attribution -> . NAME LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET ATR Expression
    (25) Attribution -> . NAME ATR READ
    (26) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR READ
    (27) Attribution -> . NAME LSBRACKET Expression LSBRACKET Expression RSBRACKET ATR READ
    (28) If -> . IF LPAREN Condition RPAREN THEN Body END
    (29) If -> . IF LPAREN Condition RPAREN THEN Body ELSE Body END
    (30) While -> . WHILE LPAREN Condition RPAREN DO Body END
    (31) Write -> . WRITES LPAREN STRING RPAREN
    (32) Write -> . WRITEI LPAREN Expression RPAREN

    $end            reduce using rule 1 (Program -> Body .)
    NAME            shift and go to state 11
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    WRITES          shift and go to state 16
    WRITEI          shift and go to state 17

    Statement                      shift and go to state 18
    Attribution                    shift and go to state 6
    If                             shift and go to state 7
    While                          shift and go to state 8
    Write                          shift and go to state 9

state 3

    (2) Program -> Declares . Body
    (3) Program -> Declares .
    (5) Declares -> Declares . Declare
    (16) Body -> . Statement
    (17) Body -> . Body Statement
    (6) Declare -> . INT NAME
    (7) Declare -> . INT NAME ATR NUM
    (8) Declare -> . ARRAY NAME LSBRACKET NUM RSBRACKET
    (9) Declare -> . ARRAY NAME LSBRACKET NUM RSBRACKET ATR LPAREN List RPAREN
    (10) Declare -> . MATRIX NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET
    (11) Declare -> . MATRIX NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET ATR LPAREN ListOfLists RPAREN
    (18) Statement -> . Attribution
    (19) Statement -> . If
    (20) Statement -> . While
    (21) Statement -> . Write
    (22) Attribution -> . NAME ATR Expression
    (23) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR Expression
    (24) Attribution -> . NAME LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET ATR Expression
    (25) Attribution -> . NAME ATR READ
    (26) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR READ
    (27) Attribution -> . NAME LSBRACKET Expression LSBRACKET Expression RSBRACKET ATR READ
    (28) If -> . IF LPAREN Condition RPAREN THEN Body END
    (29) If -> . IF LPAREN Condition RPAREN THEN Body ELSE Body END
    (30) While -> . WHILE LPAREN Condition RPAREN DO Body END
    (31) Write -> . WRITES LPAREN STRING RPAREN
    (32) Write -> . WRITEI LPAREN Expression RPAREN

    $end            reduce using rule 3 (Program -> Declares .)
    INT             shift and go to state 10
    ARRAY           shift and go to state 12
    MATRIX          shift and go to state 13
    NAME            shift and go to state 11
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    WRITES          shift and go to state 16
    WRITEI          shift and go to state 17

    Body                           shift and go to state 19
    Declare                        shift and go to state 20
    Statement                      shift and go to state 4
    Attribution                    shift and go to state 6
    If                             shift and go to state 7
    While                          shift and go to state 8
    Write                          shift and go to state 9

state 4

    (16) Body -> Statement .

    NAME            reduce using rule 16 (Body -> Statement .)
    IF              reduce using rule 16 (Body -> Statement .)
    WHILE           reduce using rule 16 (Body -> Statement .)
    WRITES          reduce using rule 16 (Body -> Statement .)
    WRITEI          reduce using rule 16 (Body -> Statement .)
    $end            reduce using rule 16 (Body -> Statement .)
    END             reduce using rule 16 (Body -> Statement .)
    ELSE            reduce using rule 16 (Body -> Statement .)


state 5

    (4) Declares -> Declare .

    INT             reduce using rule 4 (Declares -> Declare .)
    ARRAY           reduce using rule 4 (Declares -> Declare .)
    MATRIX          reduce using rule 4 (Declares -> Declare .)
    NAME            reduce using rule 4 (Declares -> Declare .)
    IF              reduce using rule 4 (Declares -> Declare .)
    WHILE           reduce using rule 4 (Declares -> Declare .)
    WRITES          reduce using rule 4 (Declares -> Declare .)
    WRITEI          reduce using rule 4 (Declares -> Declare .)
    $end            reduce using rule 4 (Declares -> Declare .)


state 6

    (18) Statement -> Attribution .

    NAME            reduce using rule 18 (Statement -> Attribution .)
    IF              reduce using rule 18 (Statement -> Attribution .)
    WHILE           reduce using rule 18 (Statement -> Attribution .)
    WRITES          reduce using rule 18 (Statement -> Attribution .)
    WRITEI          reduce using rule 18 (Statement -> Attribution .)
    $end            reduce using rule 18 (Statement -> Attribution .)
    END             reduce using rule 18 (Statement -> Attribution .)
    ELSE            reduce using rule 18 (Statement -> Attribution .)


state 7

    (19) Statement -> If .

    NAME            reduce using rule 19 (Statement -> If .)
    IF              reduce using rule 19 (Statement -> If .)
    WHILE           reduce using rule 19 (Statement -> If .)
    WRITES          reduce using rule 19 (Statement -> If .)
    WRITEI          reduce using rule 19 (Statement -> If .)
    $end            reduce using rule 19 (Statement -> If .)
    END             reduce using rule 19 (Statement -> If .)
    ELSE            reduce using rule 19 (Statement -> If .)


state 8

    (20) Statement -> While .

    NAME            reduce using rule 20 (Statement -> While .)
    IF              reduce using rule 20 (Statement -> While .)
    WHILE           reduce using rule 20 (Statement -> While .)
    WRITES          reduce using rule 20 (Statement -> While .)
    WRITEI          reduce using rule 20 (Statement -> While .)
    $end            reduce using rule 20 (Statement -> While .)
    END             reduce using rule 20 (Statement -> While .)
    ELSE            reduce using rule 20 (Statement -> While .)


state 9

    (21) Statement -> Write .

    NAME            reduce using rule 21 (Statement -> Write .)
    IF              reduce using rule 21 (Statement -> Write .)
    WHILE           reduce using rule 21 (Statement -> Write .)
    WRITES          reduce using rule 21 (Statement -> Write .)
    WRITEI          reduce using rule 21 (Statement -> Write .)
    $end            reduce using rule 21 (Statement -> Write .)
    END             reduce using rule 21 (Statement -> Write .)
    ELSE            reduce using rule 21 (Statement -> Write .)


state 10

    (6) Declare -> INT . NAME
    (7) Declare -> INT . NAME ATR NUM

    NAME            shift and go to state 21


state 11

    (22) Attribution -> NAME . ATR Expression
    (23) Attribution -> NAME . LSBRACKET Expression RSBRACKET ATR Expression
    (24) Attribution -> NAME . LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET ATR Expression
    (25) Attribution -> NAME . ATR READ
    (26) Attribution -> NAME . LSBRACKET Expression RSBRACKET ATR READ
    (27) Attribution -> NAME . LSBRACKET Expression LSBRACKET Expression RSBRACKET ATR READ

    ATR             shift and go to state 22
    LSBRACKET       shift and go to state 23


state 12

    (8) Declare -> ARRAY . NAME LSBRACKET NUM RSBRACKET
    (9) Declare -> ARRAY . NAME LSBRACKET NUM RSBRACKET ATR LPAREN List RPAREN

    NAME            shift and go to state 24


state 13

    (10) Declare -> MATRIX . NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET
    (11) Declare -> MATRIX . NAME LSBRACKET NUM RSBRACKET LSBRACKET NUM RSBRACKET ATR LPAREN ListOfLists RPAREN

    NAME            shift and go to state 25


state 14

    (28) If -> IF . LPAREN Condition RPAREN THEN Body END
    (29) If -> IF . LPAREN Condition RPAREN THEN Body ELSE Body END

    LPAREN          shift and go to state 26


state 15

    (30) While -> WHILE . LPAREN Condition RPAREN DO Body END

    LPAREN          shift and go to state 27


state 16

    (31) Write -> WRITES . LPAREN STRING RPAREN

    LPAREN          shift and go to state 28


state 17

    (32) Write -> WRITEI . LPAREN Expression RPAREN

    LPAREN          shift and go to state 29


state 18

    (17) Body -> Body Statement .

    NAME            reduce using rule 17 (Body -> Body Statement .)
    IF              reduce using rule 17 (Body -> Body Statement .)
    WHILE           reduce using rule 17 (Body -> Body Statement .)
    WRITES          reduce using rule 17 (Body -> Body Statement .)
    WRITEI          reduce using rule 17 (Body -> Body Statement .)
    $end            reduce using rule 17 (Body -> Body Statement .)
    END             reduce using rule 17 (Body -> Body Statement .)
    ELSE            reduce using rule 17 (Body -> Body Statement .)


state 19

    (2) Program -> Declares Body .
    (17) Body -> Body . Statement
    (18) Statement -> . Attribution
    (19) Statement -> . If
    (20) Statement -> . While
    (21) Statement -> . Write
    (22) Attribution -> . NAME ATR Expression
    (23) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR Expression
    (24) Attribution -> . NAME LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET ATR Expression
    (25) Attribution -> . NAME ATR READ
    (26) Attribution -> . NAME LSBRACKET Expression RSBRACKET ATR READ
    (27) Attribution -> . NAME LSBRACKET Expression LSBRACKET Expression RSBRACKET ATR READ
    (28) If -> . IF LPAREN Condition RPAREN THEN Body END
    (29) If -> . IF LPAREN Condition RPAREN THEN Body ELSE Body END
    (30) While -> . WHILE LPAREN Condition RPAREN DO Body END
    (31) Write -> . WRITES LPAREN STRING RPAREN
    (32) Write -> . WRITEI LPAREN Expression RPAREN

    $end            reduce using rule 2 (Program -> Declares Body .)
    NAME            shift and go to state 11
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    WRITES          shift and go to state 16
    WRITEI          shift and go to state 17

    Statement                      shift and go to state 18
    Attribution                    shift and go to state 6
    If                             shift and go to state 7
    While                          shift and go to state 8
    Write                          shift and go to state 9

state 20

    (5) Declares -> Declares Declare .

    INT             reduce using rule 5 (Declares -> Declares Declare .)
    ARRAY           reduce using rule 5 (Declares -> Declares Declare .)
    MATRIX          reduce using rule 5 (Declares -> Declares Declare .)
    NAME            reduce using rule 5 (Declares -> Declares Declare .)
    IF              reduce using rule 5 (Declares -> Declares Declare .)
    WHILE           reduce using rule 5 (Declares -> Declares Declare .)
    WRITES          reduce using rule 5 (Declares -> Declares Declare .)
    WRITEI          reduce using rule 5 (Declares -> Declares Declare .)
    $end            reduce using rule 5 (Declares -> Declares Declare .)


state 21

    (6) Declare -> INT NAME .
    (7) Declare -> INT NAME . ATR NUM

    INT             reduce using rule 6 (Declare -> INT NAME .)
    ARRAY           reduce using rule 6 (Declare -> INT NAME .)
    MATRIX          reduce using rule 6 (Declare -> INT NAME .)
    NAME            reduce using rule 6 (Declare -> INT NAME .)
    IF              reduce using rule 6 (Declare -> INT NAME .)
    WHILE           reduce using rule 6 (Declare -> INT NAME .)
    WRITES          reduce using rule 6 (Declare -> INT NAME .)
    WRITEI          reduce using rule 6 (Declare -> INT NAME .)
    $end            reduce using rule 6 (Declare -> INT NAME .)
    ATR             shift and go to state 30


state 22

    (22) Attribution -> NAME ATR . Expression
    (25) Attribution -> NAME ATR . READ
    (33) Expression -> . Expression ADD Term
    (34) Expression -> . Expression SUB Term
    (35) Expression -> . Expression OR Term
    (36) Expression -> . Term
    (37) Term -> . Term MULT Factor
    (38) Term -> . Term DIV Factor
    (39) Term -> . Term MOD Factor
    (40) Term -> . Term AND Factor
    (41) Term -> . Factor
    (42) Factor -> . NUM
    (43) Factor -> . Variable
    (44) Factor -> . LPAREN Expression RPAREN
    (45) Factor -> . Condition
    (46) Factor -> . NOT LPAREN Condition RPAREN
    (54) Variable -> . NAME LSBRACKET Expression RSBRACKET
    (55) Variable -> . NAME LSBRACKET Expression RSBRACKET LSBRACKET Expression RSBRACKET
    (56) Variable -> . NAME
    (47) Condition -> . Expression GREATER Expression
    (48) Condition -> . Expression LESS Expression
    (49) Condition -> . Expression GREATERE Expression
    (50) Condition -> . Expression LESSE Expression
    (51) Condition -> . Expression EQUAL Expression
    (52) Condition -> . Expression NEQUAL Expression
    (53) Condition -> . Expression
